--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -3,8 +3,19 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-body">
-          <form action="">
-            
+          <form action="/links/add" method="POST">
+            <div class="form-group">
+              <input type="text" class="form-control" name="title" placeholder="Title" autofocus>
+            </div>
+            <div class="form-group">
+              <input type="url" name="url" class="form-control" placeholder="URL">
+            </div>
+            <div class="form-group">
+              <textarea name="description" rows="2" -form-control></textarea>
+            </div>
+            <div class="form-group">
+              <button class="btn btn-success btn-block">Save</button>
+            </div>
           </form>
         </div>
       </div>
