--- a/src/views/links/list.hbs
+++ b/src/views/links/list.hbs
@@ -12,11 +12,13 @@
             </a>
             <p class="m-2">{{description}}</p>
             <p>{{timeago created_at}}</p>
-            <a href="" class="btn btn-danger">Delete Link</a>
+            <a href="/links/delete/{{id}}" class="btn btn-danger">Delete Link</a>
             <a href="" class="btn btn-secondary">Edit</a>
           </div>
         </div>
       </div>
+    {{else}}
+    
     {{/each}}
 
   </div>
