--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -20,20 +20,7 @@
   
   {{> navigation }}
 
-  {{#if success }}
-    <div class="container p-4">
-      <div class="row">
-        <div class="col-md-4 mx-auto">
-          <div class="alert alert-success alert-dissmisible fade show" role="alert">
-            {{success}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="close">
-              <span aria-hidden="true"></span>&times;</span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  {{/if}}
+  {{> messages }}
   
   {{{ body }}}
   
