--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -36,10 +36,10 @@
         {{else}}
 
         <li class="nav-item active">
-          <a class="nav-link" href="/auth/signin">SignIn</a>
+          <a class="nav-link" href="/signin">SignIn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/auth/signup">SignUp</a>
+          <a class="nav-link" href="/signup">SignUp</a>
         </li>
 
         {{/if}}
