--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -29,8 +29,14 @@
             <a class="dropdown-item" href="/links">All links</a>
             <a class="dropdown-item" href="/links/add">Add Link</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/users/logout">Logout</a>
+            
           </div>
+        </li>
+        <li class="nav-item">
+          <a href="/profile" class="nav-link">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
         </li>
 
         {{else}}
