--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -6,7 +6,7 @@
           <h3>SignIn</h3>
         </div>
         <div class="card-body">
-          <img src="/img/r31.png" alt="Logo R31" class="card-img-top mx-auto m-2 rounded-circle w-50">
+          <img src="/img/logo.png" alt="Logo R31" class="card-img-top mx-auto m-2 rounded-circle w-50">
           <form action="/signin" method="POST">
             <div class="form-group">
               <input type="text" name="username" placeholder="User Name" class="form-control">
